--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,5 +13,5 @@ RoxygenNote: 7.3.2
 Imports: 
     dplyr,
     ggplot2
-
-
+URL: https://github.com/VictoriaLopezBIO/tfVACCg
+BugReports: https://github.com/VictoriaLopezBIO/tfVACCg/issues
